fixtures/frontend/milestone-2/invalid/truthy-falsy-payloadless-projection/main.aivi
val ready:Bool = True

val branch =
    ready
     T|> .name
     F|> "wait"
